zfs partition wrongly shows occupying the whole disk
After making a zfs partition, gparted wrongly shows it occupying the whole disk, see attached screen shot.
However, both parted and fdisk are right:
# parted -l /dev/sda
Model: ATA Crucial_CT2050MX (scsi)
Disk /dev/sda: 2050GB
Sector size (logical/physical): 512B/512B
Partition Table: gpt
Disk Flags:
Number Start End Size File system Name Flags
1 20.5kB 210MB 210MB fat32 EFI System Partition boot, esp
2 210MB 175GB 174GB MACOSX
3 175GB 238GB 62.9GB ext4
8 667GB 685GB 17.2GB linux-swap(v1)
6 685GB 792GB 107GB ext4
7 792GB 834GB 41.9GB ext4
4 834GB 2050GB 1217GB
# fdisk -l
Disk /dev/sda: 1.9 TiB, 2050408636416 bytes, 4004704368 sectors
Units: sectors of 1 * 512 = 512 bytes
Sector size (logical/physical): 512 bytes / 512 bytes
I/O size (minimum/optimal): 512 bytes / 512 bytes
Disklabel type: gpt
Disk identifier: ....... (obfuscated)
Device Start End Sectors Size Type
/dev/sda1 40 409639 409600 200M EFI System
/dev/sda2 409640 341006335 340596696 162.4G unknown
/dev/sda3 341006336 463886335 122880000 58.6G Linux filesystem
/dev/sda4 1628020736 4004704255 2376683520 1.1T Linux filesystem
/dev/sda6 1337206784 1546100735 208893952 99.6G Linux filesystem
/dev/sda7 1546100736 1628020735 81920000 39.1G Linux filesystem
/dev/sda8 1303652352 1337206783 33554432 16G Linux swap
Partition table entries are not in disk order.
I know that partitions are not in order, but is that important for this issue?
I'm using the gentoo partition to operate gparted. And it's built like so (flags are gentoo default):
[I] sys-block/gparted
Available versions: 0.27.0 ~0.28.1 0.29.0 {btrfs cryptsetup dmraid f2fs fat hfs jfs kde mdadm ntfs policykit reiser4 reiserfs udf xfs}
Installed versions: 0.29.0(18:20:13 01/05/18)(policykit -btrfs -cryptsetup -dmraid -f2fs -fat -hfs -jfs -kde -mdadm -ntfs -reiser4 -reiserfs -udf -xfs)
Homepage: http://gparted.sourceforge.net/
Description: Gnome Partition Editor
[I] sys-block/parted
Available versions: 3.2-r1^t ~3.2-r2^t ~3.2_p19-r1^t (~)3.2_p20-r1^t {+debug device-mapper nls readline selinux static-libs}
Installed versions: 3.2_p20-r1^t(13:54:05 01/05/18)(debug nls readline -device-mapper -selinux -static-libs)
Homepage: https://www.gnu.org/software/parted
Description: Create, destroy, resize, check, copy partitions and file systems
All the partitions, including zfs, are operating normally:
# zpool status
pool: zmac
state: ONLINE
status: Some supported features are not enabled on the pool. The pool can
still be used, but some features are unavailable.
action: Enable all features using 'zpool upgrade'. Once this is done,
the pool may no longer be accessible by software that does not support
the features. See zpool-features(5) for details.
scan: none requested
config:
NAME STATE READ WRITE CKSUM
zmac ONLINE 0 0 0
sda4 ONLINE 0 0 0
errors: No known data errors