Implement blkid false detection of whole disk ZFS workaround (#310)

Previously blkid incorrectly reported a ZFS member on the whole disk
when it was only in a partition [1].  This was fixed in util-linux v2.35
released 21-Jan-2020 [2].  That lead to multiple GParted bug reports
[3][4][5] but the cause was not understood until many years later in
March 2024 [2].  This was long after util-linux was fixed and with
little chance of GParted being updated in old distributions it was
decided to not provide a workaround in GParted [6].

Now the same fault in blkid has occurred again [7] and there's been 2
new confirmed bug reports [8][9].  The faulty commit was tracked down
[7] and it was first included in util-linux v2.40 released
27-Mar-2024.  There's been a 2 year period of util-linux releases, v2.40
and v2.41, with this fault which has been included in the latest
distributions, hence implementing a workaround in GParted this time.

   Distributions      blkid -v   Affected
    RHEL 9             2.37.4     No
    SLES 15 SP6        2.39.3     No
    Ubuntu 24.04 LTS   2.39.3     No
    Debian 12          2.38.1     No
    RHEL 10            2.40.2     Yes
    Fedora 42          2.40.4     Yes
    SLES 15 SP7        2.40.4     Yes
    Debian 13          2.41       Yes
    Ubuntu 25.10       2.41       Yes
    Fedora 43          2.41.3     Yes
    SLES 16 SP1        2.41.3     Yes

Have recreated this issue on Ubuntu 25.10 booted from the installation
ISO.  (It already has ZFS installed).  Also recreated this issue in
Fedora 43 with ZFS installed.  Instructions to Install ZFS into Fedora
[10]:
    # dnf install -y https://zfsonlinux.org/fedora/zfs-release-3-0$(rpm --eval "%{dist}").noarch.rpm
    # dnf install -y kernel-devel-$(uname -r | awk -F'-' '{print $1}')
    # dnf install -y zfs
    # reboot

Partitioned 8 GiB drive in VM thus:
    # fdisk -l /dev/sdb
    Disk /dev/sdb: 8 GiB, 8589934592 bytes, 16777216 sectors
    Disk model: VBOX HARDDISK
    Units: sectors of 1 * 512 = 512 bytes
    Sector size (logical/physical): 512 bytes / 512 bytes
    I/O size (minimum/optimal): 512 bytes / 512 bytes
    Disklabel type: dos
    Disk identifier: 0x63ca6054

    Device     Boot   Start      End  Sectors Size Id Type
    /dev/sdb1          2048  2099199  2097152   1G  c W95 FAT32 (LBA)
    /dev/sdb2       2099200 16777215 14678016   7G 83 Linux

Create ZFS file system:
    # zpool create testpool /dev/sdb2
    # zpool status -P
      pool: testpool
     state: ONLINE
    config:

            NAME         STATE     READ WRITE CKSUM
            testpool     ONLINE       0     0     0
              /dev/sdb2  ONLINE       0     0     0

    errors: No known data errors
    # zdb --config
    testpool:
        version: 5000
        name: 'testpool'
        state: 0
        txg: 4
        pool_guid: 5492205239617107695
        ...
        vdev_children: 1
        vdev_tree:
            type: 'root'
            id: 0
            guid: 5492205239617107695
            ...
            children[0]:
                type: 'disk'
                id: 0
                guid: 12415046357994710326
                path: '/dev/sdb2'
                whole_disk: 0
                ...

Display signatures:
    # blkid /dev/sdb*
    /dev/sdb: LABEL="testpool" UUID="5492205239617107695" UUID_SUB="12415046357994710326" BLOCK_SIZE="512" TYPE="zfs_member" PTUUID="63ca6054" PTTYPE="dos"
    /dev/sdb1: UUID="A829-6677" BLOCK_SIZE="512" TYPE="vfat" PARTUUID="63ca6054-01"
    /dev/sdb2: LABEL="testpool" UUID="5492205239617107695" UUID_SUB="12415046357994710326" BLOCK_SIZE="512" TYPE="zfs_member" PARTUUID="63ca6054-02"

    # wipefs /dev/sdb*
    DEVICE OFFSET      TYPE       UUID                LABEL
    sdb    0x1fff84000 zfs_member 5492205239617107695 testpool
    sdb    0x1fffc4000 zfs_member 5492205239617107695 testpool
    sdb    0x1fe       dos
    sdb1   0x52        vfat       A829-6677
    sdb1   0x0         vfat       A829-6677
    sdb1   0x1fe       vfat       A829-6677
    sdb2   0x4000      zfs_member 5492205239617107695 testpool
    sdb2   0x44000     zfs_member 5492205239617107695 testpool
    sdb2   0x1bfe84000 zfs_member 5492205239617107695 testpool
    sdb2   0x1bfec4000 zfs_member 5492205239617107695 testpool

Since partition sdb2 ends at the very last sector of the drive the
zfs_member signatures which wipefs is reporting for the whole disk drive
are inside the boundaries of partition sdb2.
    Hex byte offset   Dec byte offset  Sector (/512)
    0x1fff84000       8589426688       16776224
    0x1fffc4000       8589688832       16776736
Last sector of partition sdb2:         16777215

Fix this by detecting the zfs_member on the whole disk with the same
UUID (ZFS pool UUID) as one of it's partitions and clearing the FS_Info
cache entry for the whole disk drive.

[1] util-linux issue 918 - blkid reports disk as zfs_member if it has a
    zfs_member partition
    https://github.com/util-linux/util-linux/issues/918

[2] GParted issue 14, note 2033797
    https://gitlab.gnome.org/GNOME/gparted/-/issues/14#note_2033797
        1 Mar 2024
        Root cause and fix:
        * util-linux issue 918 - blkid reports disk as zfs_member if it
          has a zfs_member partition
        * Fixed by commit libblkid: (zfs) don't probe whole-disk areas
          covered by partitions
        * First included in util-linux v2.35 released 21-Jan-2020

[3] GParted issue 14 - zfs partition wrongly shows occupying the whole
    disk
    https://gitlab.gnome.org/GNOME/gparted/-/issues/14
        blkid from util-linux 2.32  (libblkid 2.32.0, 21-Mar-2018)

[4] GParted issue 30 - strange problem while loading disk mbr and graph
    showing
    https://gitlab.gnome.org/GNOME/gparted/-/issues/30
        blkid from util-linux 2.33  (libblkid 2.33.0, 06-Nov-2018)

[5] GParted issue 209 - GParted displaying incorrect whole drive ZFS
    after testdisk rebuild
    https://gitlab.gnome.org/GNOME/gparted/-/issues/209

[6] GParted issue 14, note 2037879
    https://gitlab.gnome.org/GNOME/gparted/-/issues/14#note_2037879
        4 Mar 2024
        Distributions almost never update the GParted package in their
        older but supported distributions.  They only include the latest
        GParted package in their latest distribution.  Therefore even if
        we fix GParted users won't get it.  Our only solution is to
        recommend using up to date GParted Live or other live
        distribution containing GParted, which will include a fixed
        util-linux package.

[7] util-linux issue 4078 - blkid reports whole disk as zfs_member if
    the ending partition is a zfs_member
    https://github.com/util-linux/util-linux/issues/4078
        I have bisected this (on Fedora 43 with ZFS installed) to
        commit:
        51f9e0937ba2666b7fa489768b038cf26da8cc47
        libblkid: (probe) remove chunking from blkid_probe_get_idmag()

[8] GParted issue 258 - GParted showing single zfs partition instead of
    two partitions
    https://gitlab.gnome.org/GNOME/gparted/-/issues/258
        blkid from util-linux 2.40.1  (libblkid 2.40.1, 06-May-2024)

[9] GParted issue 310 - GParted does not show the first FAT partition,
    instead shows ZFS on whole disk
    https://gitlab.gnome.org/GNOME/gparted/-/issues/310
        blkid de util-linux 2.41.2  (libblkid 2.41.2, 22-Sep-2025)

[10] Install ZFS into Fedora
    https://openzfs.github.io/openzfs-docs/Getting%20Started/Fedora/index.html

Closes #310 - GParted incorrectly showing ZFS occupying the whole disk
              instead of only one partition