include/FS_Info.h
@@ -56,8 +56,10 @@ public:
 private:
 	static bool not_initialised_then_error();
 	static void set_command_found();
-	static const FS_Entry & get_cache_entry_by_path( const Glib::ustring & path );
+	static FS_Entry& get_cache_entry_by_path(const Glib::ustring& path);
 	static void run_blkid_load_cache(const std::vector<Glib::ustring>& paths);
+	static void apply_blkid_whole_drive_zfs_detection_workaround(
+	                        const std::vector<DeviceAndPartitionNames>& dev_ptn_names);
 	static void update_fs_info_cache_all_labels();
 	static bool run_blkid_update_cache_one_label( FS_Entry & fs_entry );
 
